<resources>
    <string name="app_name">TuRyde User</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="alreadymember">Already member? <b>Sign In here</b></string>
    <string name="registerhere">Don\'t have account? <b><u>Register Here</u></b></string>
    <string name="forgotpassword"><u>Forgot Password</u></string>
    <string name="agree">I agree the terms of use</string>
    <string name="hintemail"><font size="15">Email Address</font></string>
    <string name="hintnewpassword"><font size="15">New Password</font></string>
    <string name="hintverification"><font size="15">Verification Code</font></string>
    <string name="hintpassword"><font size="15">Password</font></string>
    <string name="hintcnfpassword"><font size="15">Confirm Password</font></string>
    <string name="hintcnfnewpassword"><font size="15">Confirm New Password</font></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="facebook_app_id">321014721844485</string>
    <string name="server_client_id">AIzaSyA5ZfN2HnhYwKIWUSmCvoHGEilZELTfZCI</string>

    <string name="fb_login_protocol_scheme">fb321014721844485</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Password_doesnt_match">Password doesn\'t match</string>
    <string name="Please_Enter_Valid_Email">Please Enter Valid Email.</string>
    <string-array name="months_array">
        <item>Ahmedabad</item>
        <item>Surat</item>
        <item>Mehsana</item>
        <item>Rajkot</item>
        <item>Vadodara</item>
        <item>Jamnagar</item>
        <item>Anand</item>
        <item>Navsari</item>
        <item>Gandhinagar</item>

    </string-array>
    <string name="action_settings">Settings</string>
    <string name="cant_connect">Can\'t Connect</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="Please_enter_email">Please Enter Email</string>
    <string name="Please_enter_fname">Please Enter First Name</string>
    <string name="Please_Enter_Password">Please Enter Password</string>
    <string name="Please_Enter_Password_length">Password must contain atleast 6 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyCZJDD1Osg2A3bYeAQG6UtTD9fll8t5-IU</string>
    <string name="google_maps_key2">AIzaSyBfIo6MvwH7KwDr60naJfKhR2XS0osQnNM</string>
    <!-- <string name="google_maps_key2">AIzaSyCVZP-7wcxtBAJ5usTJeSLKKffUwIXIxD8</string>-->
    <string name="comments"><font size="15">Comments to drivers</font></string>
    <string name="cancel">Your ride has been cancelled \n succesfully.</string>
    <string name="payment"><font size="20">Your payment of $30.00 \n has been succesfully received.</font></string>
    <string name="cancelnote"><font size="10">Note: Your amount will be refunded in your account in next 48 hours.</font></string>
    <string name="address"><font size="10">2385 McDowell Street \n Location</font></string>
    <string name="no_ride">Looks like there aren\'t any  \n pickups available.</string>
    <string name="no_cr_ride">Looks like there aren\'t any  \n ongoing ride.</string>
</resources>
