<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/msafiriblur"

    android:orientation="vertical"
    tools:context="com.eleganz.msafiri.MainActivity">

    <ImageView
        android:layout_width="160dp"
        android:id="@+id/logo"
        android:transitionName="logo_transition"

        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shadow"
            android:drawableLeft="@drawable/envelope"
            android:drawablePadding="2dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textEmailAddress"
            android:hint="@string/hintemail"
            android:padding="8dp"
            android:paddingLeft="8dp"
            android:textColorHint="#3B3B3B" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_shadow"
            android:drawableLeft="@drawable/ic_action_name"
            android:drawablePadding="2dp"
            android:ems="10"
            android:padding="8dp"
            android:inputType="textPassword"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:hint="@string/hintpassword"
            android:paddingLeft="8dp"
            android:textColorHint="#3B3B3B" />
        <EditText
            android:id="@+id/cpassword"
            android:inputType="textPassword"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_shadow"
            android:drawableLeft="@drawable/ic_action_name"
            android:drawablePadding="2dp"
            android:ems="10"
            android:padding="8dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:hint="@string/hintcnfpassword"
            android:paddingLeft="8dp"
            android:textColorHint="#3B3B3B" />
        <CheckBox
            android:id="@+id/terms_cb"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:button="@drawable/checkbox_selector"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg_shadow"
            android:text="Sign Up"
            android:textColor="@android:color/white" />
        <com.eleganz.msafiri.lib.RobotoMediumTextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alreadymember"
            android:gravity="center"
            android:id="@+id/signtxt"
            android:textColor="#0D3A61"
            android:layout_gravity="center"
            />


    </LinearLayout>
    </ScrollView>


    </RelativeLayout>
</LinearLayout>
